hero section added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
 </head>
 <body>
-    <div class="border-b border-gray-300 py-4 px-4">
+    <header class="border-b border-gray-300 py-4 px-4">
         <div class="container mx-auto flex items-center justify-between relative">
             <img src="./img/logo.svg" width="291" alt="main-logo" />
             <img src="./img/header-left-dot-pattern.svg" width="88" class="absolute mr-12 -top-4 right-full" alt="main-logo" />
@@ -51,6 +51,15 @@
                 </ul>
             </nav>
         </div>
-    </div>
+    </header>
+    <section class="hero px-24 py-4">
+        <div class="container mx-auto flex items-center justify-between relative">
+            <h1 class="text-6xl font-medium relative
+                text-transparent bg-clip-text bg-gradient-to-r
+                from-green-400 to-purple-400 inline-block text-center">
+                <strong class="font-bold">AI</strong> to write code, blogs & more
+            </h1>
+        </div>
+    </section>
 </body>
 </html>
