--- a/index.html
+++ b/index.html
@@ -26,58 +26,140 @@
     </script>
 </head>
 <body>
-    <header class="border-b border-gray-300 py-4 px-4">
-        <div class="container mx-auto flex items-center justify-between relative">
-            <img src="./img/logo.svg" width="291" alt="main-logo" />
-            <img src="./img/header-left-dot-pattern.svg" width="88" class="absolute mr-12 -top-4 right-full" alt="main-logo" />
-            <img src="./img/header-right-shap.svg" width="141" class="absolute left-full top-0 ml-12" alt="main-logo" />
-            <nav>
-                <ul class="flex">
-                    <li>
-                        <a href="#" class="py-2 px-4 transition rounded-md
+<header class="border-b border-gray-300 py-4 px-4">
+    <div class="container mx-auto flex items-center justify-between relative">
+        <img src="./img/logo.svg" width="291" alt="main-logo"/>
+        <img src="./img/header-left-dot-pattern.svg" width="88" class="absolute mr-12 -top-4 right-full"
+             alt="main-logo"/>
+        <img src="./img/header-right-shap.svg" width="141" class="absolute left-full top-0 ml-12" alt="main-logo"/>
+        <nav>
+            <ul class="flex">
+                <li>
+                    <a href="#" class="py-2 px-4 transition rounded-md
                             bg-gradient-to-r border-green-400 bg-gradient-to-br from-purple-500 to-green-400 text-white active:bg-blue-800 active:text-white">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Feature</a>
-                    </li>
-                    <li>
-                        <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Pricing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Login</a>
-                    </li>
-                    <li>
-                        <a href="#" class="py-2 px-4 transition rounded-md
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Feature</a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Pricing</a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Contact</a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 px-4 hover:bg-gray-200 transition rounded-md">Login</a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 px-4 transition rounded-md
                            bg-gradient-to-r from-purple-500 to-indigo-600 text-white">
-                            Free Signup
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section class="hero px-24 py-24">
-        <div class="container mx-auto">
-            <h1 class="text-[72px] font-normal relative
+                        Free Signup
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="hero px-24 py-24">
+    <div class="container mx-auto">
+        <h1 class="text-[72px] font-normal relative
                 text-transparent bg-clip-text bg-gradient-to-r
                 from-[#3ED6BB] from-13% to-[#785DFC] to-100% text-center ">
-                <strong class="font-bold">AI</strong> to write code, blogs & more
-            </h1>
-            <p class="text-[24px] font-normal text-center text-[#646977] max-w-3xl mx-auto mt-10 leading-normal">
-                Enhance everything you do by using the latest from OpenAI to solve problems, write solutions and make life easier.
-            </p>
-            <div class="grid place-content-center">
-                <a href="#" class="px-[73px] py-[20px] mt-5 text-[25px] font-medium transition rounded-[19px] leading-normal
+            <strong class="font-bold">AI</strong> to write code, blogs & more
+        </h1>
+        <p class="text-[24px] font-normal text-center text-[#646977] max-w-3xl mx-auto mt-10 leading-normal">
+            Enhance everything you do by using the latest from OpenAI to solve problems, write solutions and make life
+            easier.
+        </p>
+        <div class="grid place-content-center">
+            <a href="#" class="px-[73px] py-[20px] mt-5 text-[25px] font-medium transition rounded-[19px] leading-normal
                            bg-gradient-to-r from-[#2AC4A0] to-[#6C77EF] text-white">
-                    Get Started
+                Get Started
+            </a>
+        </div>
+    </div>
+</section>
+<section class="relative py-4">
+    <div class="container w-4/6	 mx-auto relative">
+        <div class="rounded-xl shadow-2xl border p-8 flex divide-y">
+            <div class="p-8 flex-1">
+                <h2 class="flex">
+                    <img class="mr-2" width="45" src="img/chat-icon.svg"/>
+                    <span class="text-4xl font-normal">Explain Code</span>
+                </h2>
+                <p class="text-gray-500 text-lg">Explain some code based on the syntax provided</p>
+                <h3 class="mt-6 text-lg font-bold">Paste your code below:</h3>
+                <div class="bg-gray-100 mt-2 h-44 text-xl rounded-lg">
+                    function HelloWorld(text){
+                    echo text || "Hello World";
+                    }
+                </div>
+                <a href="#" class="inline-flex items-center gap-x-2 mt-10 py-3 px-4 transition rounded-md
+                           bg-gradient-to-r from-purple-500 to-indigo-600 text-white"
+                   style="border-radius: 15px; background: linear-gradient(90deg, #795FFD 0%, #3518C9 100%);">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
+                        <path d="M9.33335 18.6667H7.00002C6.38118 18.6667 5.78769 18.4208 5.3501 17.9832C4.91252 17.5457 4.66669 16.9522 4.66669 16.3333V7C4.66669 6.38116 4.91252 5.78767 5.3501 5.35008C5.78769 4.9125 6.38118 4.66666 7.00002 4.66666H16.3334C16.9522 4.66666 17.5457 4.9125 17.9833 5.35008C18.4209 5.78767 18.6667 6.38116 18.6667 7V9.33333L9.33335 18.6667ZM11.6667 23.3333H21C21.6189 23.3333 22.2123 23.0875 22.6499 22.6499C23.0875 22.2123 23.3334 21.6188 23.3334 21V11.6667C23.3334 11.0478 23.0875 10.4543 22.6499 10.0167C22.2123 9.57916 21.6189 9.33333 21 9.33333H11.6667C11.0478 9.33333 10.4544 9.57916 10.0168 10.0167C9.57919 10.4543 9.33335 11.0478 9.33335 11.6667V21C9.33335 21.6188 9.57919 22.2123 10.0168 22.6499C10.4544 23.0875 11.0478 23.3333 11.6667 23.3333Z"
+                              stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <span class="text-xl">Enhance with AI</span>
+                </a>
+            </div>
+            <div class="p-8 flex-1 border-none">
+                <div class="flex items-center gap-x-2">
+                   <div class="bg-black flex items-center justify-center rounded-full h-10 w-10">
+                       <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                           <path d="M9.3125 5.16953L16.2727 11.8977L9.3125 18.626" stroke="white" stroke-width="2.91667" stroke-linecap="round" stroke-linejoin="round"/>
+                       </svg>
+                   </div>
+                    <h3 class="text-xl font-medium">What does this code do?</h3>
+                </div>
+                <p class="text-gray-500 text-lg mb-4">The following code does:</p>
+
+                <div class="flex items-center gap-x-2 border-b pb-3">
+                    <div class="p-2 bg-gray-300 flex items-center justify-center rounded-full h-9 w-9">
+                        <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                            <path d="M9.3125 5.16953L16.2727 11.8977L9.3125 18.626" stroke="black" stroke-width="2.91667" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-normal leading-tight">The code above is a function definition.</h3>
+                </div>
+
+                <div class="flex gap-x-2 mt-4 border-b pb-3">
+                    <div class="p-2 bg-gray-300 flex items-center justify-center rounded-full h-9 w-9">
+                        <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                            <path d="M9.3125 5.16953L16.2727 11.8977L9.3125 18.626" stroke="black" stroke-width="2.91667" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-normal leading-tight">
+                        It defines a new function called `HelloWorld` that takes a single argument called `text`
+                    </h3>
+                </div>
+
+                <div class="flex gap-x-2 mt-4">
+                    <div class="p-2 bg-gray-300 flex items-center justify-center rounded-full h-9 w-9">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                            <path d="M9.3125 5.16953L16.2727 11.8977L9.3125 18.626" stroke="black" stroke-width="2.91667" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-normal leading-tight">
+                       The body of the function is a single line of code that prints out the value of `text` if it is defined, or `Hello World` if it is not defined.
+                    </h3>
+                </div>
+
+
+                <a href="#" class="inline-flex items-center gap-x-2 mt-10 py-3 px-10 transition rounded-md
+                           bg-[#F3F3F3]"
+                   style="border-radius: 15px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" fill="none">
+                        <path d="M7.66666 15.3333H5.75C5.24167 15.3333 4.75416 15.1314 4.39471 14.772C4.03527 14.4125 3.83333 13.925 3.83333 13.4167V5.75C3.83333 5.24167 4.03527 4.75416 4.39471 4.39471C4.75416 4.03527 5.24167 3.83334 5.75 3.83334H13.4167C13.925 3.83334 14.4125 4.03527 14.772 4.39471C15.1314 4.75416 15.3333 5.24167 15.3333 5.75V7.66667L7.66666 15.3333ZM9.58333 19.1667H17.25C17.7583 19.1667 18.2458 18.9647 18.6053 18.6053C18.9647 18.2458 19.1667 17.7583 19.1667 17.25V9.58334C19.1667 9.075 18.9647 8.58749 18.6053 8.22805C18.2458 7.8686 17.7583 7.66667 17.25 7.66667H9.58333C9.075 7.66667 8.58749 7.8686 8.22804 8.22805C7.8686 8.58749 7.66666 9.075 7.66666 9.58334V17.25C7.66666 17.7583 7.8686 18.2458 8.22804 18.6053C8.58749 18.9647 9.075 19.1667 9.58333 19.1667Z" stroke="#535353" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <span class="text-lg">Copy Output</span>
                 </a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 </body>
 </html>
