update section design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
     </script>
 </head>
-<body>
+<body class="overflow-x-hidden">
 <header class="border-b border-gray-300 py-4 px-4">
     <div class="container mx-auto flex items-center justify-between relative">
         <img src="./img/logo.svg" width="291" alt="main-logo"/>
@@ -81,9 +81,9 @@
         </div>
     </div>
 </section>
-<section class="relative py-4">
+<section class="relative py-4 z-10">
     <div class="container w-4/6	 mx-auto relative">
-        <div class="rounded-xl shadow-2xl border p-8 flex divide-y">
+        <div class="rounded-xl shadow-2xl border p-8 bg-white flex divide-y">
             <div class="p-8 flex-1">
                 <h2 class="flex">
                     <img class="mr-2" width="45" src="img/chat-icon.svg"/>
@@ -160,6 +160,23 @@
             </div>
         </div>
     </div>
+</section>
+<section class="h-48 -mt-48 relative z-0"
+         style="background: linear-gradient(90deg, #785EFD 0%, #371BCB 100%);">
+        <img class="absolute top-[-179px]" width="230" src="img/circle-icon.svg">
+</section>
+<section class="h-48"
+         style="background: linear-gradient(90deg, #785EFD 0%, #371BCB 100%);">
+   <div class="flex justify-center">
+       <a href="#" class="inline-flex items-center gap-x-2 mt-10 py-3 px-6 transition rounded-md
+                           bg-white text-[#381BCB]"
+          style="border-radius: 15px;">
+           <svg class="w-5" xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewBox="0 0 31 31" fill="none">
+               <path d="M22.7755 11.3877V15.1836V11.3877ZM22.7755 15.1836V18.9796V15.1836ZM22.7755 15.1836H26.5714H22.7755ZM22.7755 15.1836H18.9796H22.7755ZM16.449 8.85711C16.449 10.1994 15.9157 11.4868 14.9666 12.4359C14.0174 13.3851 12.7301 13.9183 11.3878 13.9183C10.0454 13.9183 8.75809 13.3851 7.80892 12.4359C6.85976 11.4868 6.32653 10.1994 6.32653 8.85711C6.32653 7.51479 6.85976 6.22744 7.80892 5.27828C8.75809 4.32912 10.0454 3.79588 11.3878 3.79588C12.7301 3.79588 14.0174 4.32912 14.9666 5.27828C15.9157 6.22744 16.449 7.51479 16.449 8.85711V8.85711ZM3.79591 25.3061C3.79591 23.2926 4.59577 21.3616 6.01951 19.9378C7.44326 18.5141 9.37427 17.7143 11.3878 17.7143C13.4012 17.7143 15.3322 18.5141 16.756 19.9378C18.1797 21.3616 18.9796 23.2926 18.9796 25.3061V26.5714H3.79591V25.3061Z" stroke="#381BCB" stroke-width="2.53061" stroke-linecap="round" stroke-linejoin="round"/>
+           </svg>
+           <span class="text-lg font-medium">Free Signup</span>
+       </a>
+   </div>
 </section>
 </body>
 </html>
